TPFinal/Infraestructura/terraform servicios/06-nat.tf
# # https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_router_nat
# resource "google_compute_router_nat" "nat" {
#   name   = "nat"
#   router = google_compute_router.router.name
#   region = "us-east1"

#   source_subnetwork_ip_ranges_to_nat = "LIST_OF_SUBNETWORKS"
#   nat_ip_allocate_option             = "MANUAL_ONLY"

#   subnetwork {
#     name                    = google_compute_subnetwork.private.id
#     source_ip_ranges_to_nat = ["ALL_IP_RANGES"]
#   }

#   nat_ips = [google_compute_address.nat.self_link]
# }

# # https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_address
# resource "google_compute_address" "nat" {
#   name         = "nat"
#   address_type = "EXTERNAL"
#   network_tier = "PREMIUM"

#   depends_on = [google_project_service.compute]
# }
